<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sothich.SoThich_UserFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hobbyTitle"
            app:counterEnabled="true"
            app:counterMaxLength="10000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userHobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobbyInput" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/userInfo">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/hobbySave"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/hobbyCancel"
            android:textColor="@color/purple_500"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>