<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".muctieu.UserFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleGoal"
            app:counterEnabled="true"
            app:counterMaxLength="10000"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputGoal"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/userInfo"
        >

        <Button
            android:id="@+id/goalSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/goalSave"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/goalDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/goalCancel"
            android:textColor="@color/purple_500"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>